--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
             <p class="scroll-title">Return Of The Developer</p>
             <br />
             <p class="scroll-content">It is a period of technological innovation. Once the bastion of a select few, the INTERNET, and the improvements it heralded, now permeate all facets of society.</p>
-            <p class="scroll-content">Powering everything from the largest supercomputers to the smallest smartphones, SOFTWARE has become a critical link in all aspects of our lives.</p>
-            <p class="scroll-content">As this power grows, it becomes ever more critical that the keepers of this knowledge, the DEVELOPERS, remain vigilant against the never-ending onslaught of BUGS and the havoc they bring ....</p>
+            <p class="scroll-content">Powering devices from the largest supercomputers to the smallest smartphones, SOFTWARE has become a critical link in every aspect of our lives.</p>
+            <p class="scroll-content">As this power grows, it becomes increasingly important that the keepers of this knowledge, the DEVELOPERS, remain vigilant against the never-ending onslaught of BUGS and the havoc they bring ....</p>
             <br />
             <br />
             <br />
             <p class="scroll-content">
-                <a href="https://about.me/shawn.headrick">
+                <a target="_blank" href="https://about.me/shawn.headrick">
                     <img class="social" src="icon-about-me.png" /> about.me/shawn.headrick
                 </a>
             </p>
             <p class="scroll-content">
-                <a href="https://www.linkedin.com/in/shawnheadrick">
+                <a target="_blank" href="https://www.linkedin.com/in/shawnheadrick">
                     <img class="social" src="icon-linkedin.png" /> linkedin.com/in/shawnheadrick
                 </a>
             </p>
             <p class="scroll-content">
-                <a href="https://plus.google.com/+ShawnHeadrick">
+                <a target="_blank" href="https://plus.google.com/+ShawnHeadrick">
                     <img class="social" src="icon-google-plus.png" /> plus.google.com/+ShawnHeadrick
                 </a>
             </p>
             <p class="scroll-content">
-                <a href="https://www.facebook.com/shawn.headrick">
+                <a target="_blank" href="https://www.facebook.com/shawn.headrick">
                     <img class="social" src="icon-facebook.png" /> facebook.com/shawn.headrick
                 </a>
             </p>
             <p class="scroll-content">
-                <a href="https://www.twitter.com/IronManRust">
+                <a target="_blank" href="https://www.twitter.com/IronManRust">
                     <img class="social" src="icon-twitter.png" /> twitter.com/IronManRust
                 </a>
             </p>
             <p class="scroll-content">
-                <a href="https://www.youtube.com/IronManRust">
+                <a target="_blank" href="https://www.youtube.com/IronManRust">
                     <img class="social" src="icon-youtube.png" /> youtube.com/IronManRust
                 </a>
             </p>
