--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="scroll-title">Return Of The Developer</p>
             <br />
             <p class="scroll-content">It is a period of technological innovation. Once the bastion of a select few, the INTERNET, and the improvements it heralded, now permeate all facets of society.</p>
-            <p class="scroll-content">Powering devices from the largest supercomputers to the smallest smartphones, SOFTWARE has become a critical link in every aspect of our lives.</p>
+            <p class="scroll-content">Directing devices from the largest supercomputers to the smallest smartphones, SOFTWARE has become a critical link in every aspect of our lives.</p>
             <p class="scroll-content">As this power grows, it becomes increasingly important that the keepers of this knowledge, the DEVELOPERS, remain vigilant against the never-ending onslaught of BUGS and the havoc they bring ....</p>
             <br />
             <br />
