--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ﻿<html>
 <head>
     <title>Shawn Headrick</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
-    <p class="splash">A long time ago in a browser far, far away ....</p>
+    <p class="splash">A long time ago in a browser far,<br />far away ....</p>
     <p class="heading">Shawn Headrick</p>
     <div class="scroll">
         <div class="scroll-container">
