--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
     <title>Shawn Headrick</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
